mengkoneksikan ke database

--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ CI_ENVIRONMENT = development
 # app.CSPEnabled = false
 
 #--------------------------------------------------------------------
-# DATABASE
+DATABASE
 #--------------------------------------------------------------------
 
 database.default.hostname = localhost
