--- a/.env
+++ b/.env
@@ -31,7 +31,7 @@ DATABASE
 #--------------------------------------------------------------------
 
 database.default.hostname = localhost
-database.default.database = absensi_mhs
+database.default.database = db_absensi
 database.default.username = root
 database.default.password = 
 database.default.DBDriver = MySQLi
